@@ -43,6 +43,7 @@ Version 0.6.0~dev
 	* Support aac codec in ffmpeg worker.
 	* Add qt-faststart worker.
 	* Add flvtool2 worker.
+	* Support hinting option for flv, mp4 and mov containers.
 
 Version 0.5.0 Released on 2012/03/29
 
